Better handling of user entry for classpath.
Directories on class path specified as a CLI parameter now do not have
to end in a slash. Issue #4